# genai-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: Dockerfile  cli.sh  devcontainer.json  docker-compose.yml  enter-container.sh  fastapi-server.sh  launch-vscode.sh  launch-windsurf.sh  start-container.sh  stop-container.sh  view-logs.sh
.docker/: Dockerfile  Dockerfile.test  README.md  build.sh  cleanup.sh  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  logs.sh  run.sh  stop.sh  test.sh
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/workflows/: README.md  ci.yml  codeql.yml  dependency-update.yml  performance.yml  pr-validation.yml  release.yml  security-scan.yml
backend/: main.py
benchmarks/: test_benchmarks.py
scripts/: README.md  build.sh  cleanup.sh  deploy.sh  logs.sh  run.sh  test.sh
scripts/api/: README.md  health.sh  summarize-pdf.sh
scripts/cli/: README.md  download-file.sh  download.sh  healthcheck.sh  summarize.sh
scripts/compose/: Dockerfile.test  README.md  build.sh  cleanup.sh  deploy.sh  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  logs.sh  run.sh  stop.sh  test.sh
scripts/docker/: .env.docker  README.md  _bash.sh  _build.sh  _cleanup.sh  _generate-env.sh  _logs.sh  _run.sh  _start.sh  _status.sh  _stop.sh  _test.sh  _tests.sh  _utils.sh  build.sh  cli.sh  logs.sh  test.sh
src/: main.py
tests/: __init__.py  test_api.py  test_benchmarks.py
