[project]
name = "genai-agent"
version = "0.1.0"
description = "FastAPI application for downloading files and summarizing PDFs using Google Gemini"
authors = [
    {name = "Ricardo Dinis", email = "basalto@gmail.com"}
]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "PyPDF2==3.0.1",
    "google-generativeai==0.3.2",
    "python-dotenv==1.0.0",
]
license = {text = "MIT"}

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "httpx==0.24.1",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]
